<resources>
    <string name="app_name">99DriverController</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    ----- main strings -----
    <string name="main_header">Teste</string>
    <string name="main_titulo">Title Teste</string>

    ----- navigation strings -----
    <string name="nav_header">99 Driver</string>
    <string name="nav_runs">Runs</string>
    <string name="nav_earns">Earns</string>
    <string name="nav_aboutus">About Us</string>
    <string name="nav_leave">Exit</string>

    ----- runs strings -----
    <string-array name="array_quantidade_bonus">
        <item>1</item>            <item>2</item>
        <item>3</item>            <item>4</item>
        <item>5</item>            <item>6</item>
        <item>7</item>            <item>8</item>
        <item>9</item>            <item>10</item>
        <item>11</item>            <item>12</item>
        <item>13</item>            <item>14</item>
        <item>15</item>            <item>16</item>
        <item>17</item>            <item>18</item>
        <item>19</item>            <item>20</item>
        <item>21</item>            <item>22</item>
        <item>23</item>            <item>24</item>
        <item>25</item>            <item>26</item>
        <item>27</item>            <item>28</item>
        <item>29</item>            <item>30</item>
    </string-array>

    <string-array name="array_tipo_add">
        <item>Dinheiro</item>
        <item>App</item>
        <item>PIX</item>
    </string-array>

    <string name="menu_list">List</string>
    <string name="menu_runs">Runs</string>
    <string name="menu_bonus">Bonus</string>
    <string name="logo_do_99">Logo do 99</string>
    <string name="titulo99mult">99 Multiplies</string>
    <string name="label_porcentagem">% Bonus da Promoção Ex: 15</string>
    <string name="label_quantbonus">Number of runs</string>
    <string name="button_addrun">Add runs</string>
    <string name="buttonplus">Add runs</string>
    <string name="titlerunslist">Runs List</string>
    <string name="idlist">*</string>
    <string name="listdate">Data</string>
    <string name="listtipo">Pagamento</string>
    <string name="listvalortotal">Total price</string>
    <string name="msgquantcorridas">No runs have been made so far.</string>
    <string name="addruntitle">Add new run</string>
    <string name="quantcorridasbonus">Runs needed:</string>
    <string name="valorcorridaadd">Run price Ex: 7.50</string>
    <string name="datacorridaadd">Run date Ex: 01/12/2020</string>
    <string name="selectruns">Select Runs</string>
    <string name="listtotal">Total de lucro</string>
    <string name="addrun">Add Run</string>
    <string name="select">Selecionar corrida</string>


</resources>