<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RunsRunsFragment"
    android:background="#f2ffcc">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/textSizeDefault"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo99mult"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/txt_dateadd"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/datacorridaadd"
            android:textSize="@dimen/textSizeDefault"
            android:focusable="false"/>

        <EditText
            android:id="@+id/txt_valoradd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valorcorridaadd"
            android:textSize="@dimen/textSizeDefault"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/bt_addruns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addrun" />


    </LinearLayout>

</FrameLayout>