<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RunsListFragment"
    android:background="#f2ffcc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/txt_listruns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:paddingTop="@dimen/margin_default"
                android:text="@string/titlerunslist"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#636363"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingEnd="@dimen/margin_default"
                android:layout_centerHorizontal="true"
                android:paddingTop="40dp"
                android:hint="@string/listtotal"
                tools:text="Total: "
                android:textSize="@dimen/textSizeDefault"
                android:textStyle="bold"
                android:textColor="@color/Green"
                android:layout_gravity="center_horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/lb_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idlist"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_below="@+id/txt_listruns"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="82dp"/>

            <TextView
                android:id="@+id/lb_date"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/listdate"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/lb_id"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:layout_below="@+id/txt_listruns"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/lb_quant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_listruns"
                android:layout_toEndOf="@+id/lb_date"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/margin_default"
                android:gravity="center_horizontal"
                android:text="@string/listvalortotal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lb_valortotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_listruns"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_toEndOf="@+id/lb_quant"
                android:gravity="center_horizontal"
                android:text="@string/listbonus"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2ffcc"
            >

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_runs"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/runs_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>